<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android= "http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <EditText android:id="@+id/edit_message"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:hint="@string/edit_message"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendLocation"/>
    <Button
        android:minWidth="0in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_zoom_in"
        android:onClick="zoomIn"/>
    <Button
        android:minWidth="0in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_zoom_out"
        android:onClick="zoomOut"/>
    <Button
        android:minWidth="0in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_type"
        android:onClick="changeType"/>
</LinearLayout>
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />
</LinearLayout>